<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hospital</groupId>
    <artifactId>HospitalProject</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Desktop app nên để jar -->
    <packaging>jar</packaging>

    <dependencies>
        <!-- JDBC Driver (MySQL) -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.4.0</version>
        </dependency>

        <!-- Gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>

        <!-- JavaFX (Windows) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.2</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21.0.2</version>
            <classifier>win</classifier>
        </dependency>
    </dependencies>

    <build>
        <finalName>HMS</finalName>

        <plugins>
            <!-- Compile Java 17 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Plugin chạy JavaFX -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <!-- MAIN CLASS của app (đã thêm file ui.MainApp) -->
                    <mainClass>ui.MainApp</mainClass>
                </configuration>
            </plugin>

            <!-- Tạo manifest Main-Class để jar có thể chạy bằng java -jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>ui.MainApp</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- Thêm exec plugin để dễ chạy bằng mvn exec:java -Dexec.mainClass=ui.MainApp -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>ui.MainApp</mainClass>
                </configuration>
            </plugin>

            <!-- OpenRewrite: cấu hình tạm để chạy recipe UpgradeToJava21 -->
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>5.47.3</version>
                <configuration>
                    <activeRecipes>
                        <activeRecipe>org.openrewrite.java.migrate.UpgradeToJava21</activeRecipe>
                    </activeRecipes>
                    <recipeArtifactCoordinates>
                        <recipeArtifactCoordinate>org.openrewrite.recipe:rewrite-migrate-java:2.31.1</recipeArtifactCoordinate>
                    </recipeArtifactCoordinates>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
